--- a/revamp/07.2_V_plot-coexpression.Rmd
+++ b/revamp/07.2_V_plot-coexpression.Rmd
@@ -60,6 +60,30 @@ append_classifer_counts <- function(w.df, count.df){
 
 ```{r}
 
+plot_enrich <- function(plot.df){
+  plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
+    geom_point(size=1.5,aes(shape=geneset,fill=log_pval),
+               alpha=0.7)  # size=classifer.count,
+
+  plt <- plt + facet_wrap(~threshold,nrow=1)
+  plt <- plt + 
+    scale_shape_manual(name="Gene set",
+      values=c(21,22,23,24,25,4)) +
+    scale_y_continuous(limits=c(0.8,2),breaks=seq(0.8,2,0.2)) + 
+    #scale_fill_continuous(guide = guide_legend(nrow=1)) + 
+    scale_fill_viridis(name="-log10(p)",direction = -1) + # ,guide = guide_legend(nrow=1)
+    ylab("Enrichment") + xlab("Tissue") + 
+    theme_bw() + 
+    theme(axis.text.y=element_text(size=6.5,angle=0,vjust=0.5),
+          axis.text.x=element_text(size=6.5,angle=30,vjust=0.5),
+          strip.text = element_text(size=10),
+          axis.title=element_text(size=12),
+          legend.key.size = unit(1,"line")) + 
+    scale_size(range=c(1,3),limits=c(0,350)) 
+  return(plt)
+}
+
+
 plot_enrich_alt2 <- function(plot.df){
   plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
     geom_point(size=1.5,aes(shape=geneset,fill=log_pval),
@@ -152,11 +176,11 @@ keep.tissues <- c("Islet","Muscle...Skeletal","Liver",
 sub.df1 <- filter(plot.df1,tissue %in% keep.tissues)
 sub.df1$tissue <- gsub("Muscle...Skeletal","Muscle",sub.df1$tissue)
 sub.df1$tissue <- gsub("Adipose...Subcutaneous","Adipose",sub.df1$tissue)
-plt.sub1 <- plot_enrich_alt2(sub.df1) +
-  theme(axis.text.x=element_text(size=6,angle=-30,vjust=0),
-        axis.text.y=element_text(size=8,angle=30))
-ggsave(plot=plt.sub1,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared_1stNearest.png",width=8.5,height=1.75)
-ggsave(plot=plt.sub1,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared_1stNearest.pdf",width=8.5,height=1.75)
+plt.sub1 <- plot_enrich(sub.df1) +
+  theme(axis.text.y=element_text(size=8,angle=0,vjust=0),
+        axis.text.x=element_text(size=8,angle=30))
+ggsave(plot=plt.sub1,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared_1stNearest.png",width=10,height=2.5)
+ggsave(plot=plt.sub1,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared_1stNearest.pdf",width=10,height=2.5)
 
 sub.df2 <- filter(plot.df2,tissue %in% keep.tissues)
 sub.df2$tissue <- gsub("Muscle...Skeletal","Muscle",sub.df2$tissue)
