--- a/revamp/10.1_plot-pca-phys-FULL.Rmd
+++ b/revamp/10.1_plot-pca-phys-FULL.Rmd
@@ -235,6 +235,15 @@ pca_plot_annotated <- function(pca.list,pcX,pcY,class.df,withShared=FALSE){
     arrange(.,desc(muscle)) %>% head(5)
   other.df <- filter(pca.df,assigned=="other") %>% 
     arrange(.,desc(other)) %>% head(5)
+  if (withShared==TRUE){
+    share.df <- filter(pca.df,assigned=="shared") 
+    share.df$maxtoa <- map(1:dim(share.df)[1],function(i){
+      share.df[i,] %>% 
+        dplyr::select(.,one_of("islet","muscle","adipose","liver")) %>% 
+        as.numeric(.) %>% max(.)
+    }) %>% as.numeric(.)
+    share.df <- arrange(share.df,desc(maxtoa)) %>% head(10)
+  }
   
   pca.df$assigned <- pca.df$assigned %>% firstup(.)
   pca.df$maxppa <- map(pca.df$Locus.ID,function(id){
@@ -256,18 +265,23 @@ pca_plot_annotated <- function(pca.list,pcX,pcY,class.df,withShared=FALSE){
     plt <- plt +scale_size(range = c(0.1,3),breaks=seq(0,1,0.2),name="Maximum PPA") + 
     theme_classic() + 
     geom_label_repel(data=other.df,aes_string(x=pcX,y=pcY,label="refseq"),
-                     size=3,fill="grey",alpha=0.8,label.padding = 0.1) + 
+                     size=3,fill="grey",alpha=0.7,label.padding = 0.1) + 
     geom_label_repel(data=islet.df,aes_string(x=pcX,y=pcY,label="refseq"),
-                     size=3,fill="olivedrab2",alpha=0.8,label.padding = 0.1) +   
+                     size=3,fill="olivedrab2",alpha=0.7,label.padding = 0.1) +   
     geom_label_repel(data=adipose.df,aes_string(x=pcX,y=pcY,label="refseq"),
-                     size=3,fill="gold1",alpha=0.8,label.padding = 0.1) + 
+                     size=3,fill="gold1",alpha=0.7,label.padding = 0.1) + 
     geom_label_repel(data=liver.df,aes_string(x=pcX,y=pcY,label="refseq"),
-                     size=3,fill="#f7905d",alpha=0.8,label.padding = 0.1) +
+                     size=3,fill="#f7905d",alpha=0.7,label.padding = 0.1) +
     geom_label_repel(data=muscle.df,aes_string(x=pcX,y=pcY,label="refseq"),
-                     size=3,fill="#f97a7a",alpha=0.8,label.padding = 0.1) + 
+                     size=3,fill="#f97a7a",alpha=0.7,label.padding = 0.1) + 
     xlab(pcX %&% " (" %&% pcXpve %&% "%)") + 
     ylab(pcY %&% " (" %&% pcYpve %&% "%)")
     
+    if (withShared==TRUE){
+      plt <- plt + geom_label_repel(data=share.df,aes_string(x=pcX,y=pcY,label="refseq"),
+                     size=3,fill="dodgerblue1",alpha=0.7,label.padding = 0.1) 
+    }
+    return(plt)
 }
 
 complete_pca <- function(ppa.df,centerScale,savename){
