--- a/revamp/16_visualize-enrichments.Rmd
+++ b/revamp/16_visualize-enrichments.Rmd
@@ -126,7 +126,7 @@ eqtl_plot_gwas <- function(plot.df){
 
 ```{r}
 
-ex.vec <- c("Islet","Inspire.exon","Mvdb.exon","Inspire.gene")
+ex.vec <- c("Islet","Inspire.exon","Mvdb.exon")#,"Inspire.gene")
 eqtl.plt.snpsnap.full <- eqtl_plot_snpsnap(eqtl.df)
 ggsave(plot=eqtl.plt.snpsnap.full,filename=plot.dir %&%
          "eqtl_enrich_snpsnap_full.png",width=10,height=4)
@@ -151,6 +151,35 @@ ggsave(plot=eqtl.plt.gwas,filename=plot.dir %&%
 ggsave(plot=eqtl.plt.gwas,filename=plot.dir %&%
          "eqtl_enrich_gwas.pdf",width=10,height=2.5)
 
+
+```
+
+
+
+
+# GWAS Enrichment 
+
+
+```{r}
+
+gwas.df <- fread(work.dir %&%
+      "enrichment_files/gwas/gwas_enrichment_TOAthresh20.txt") %>% 
+  filter(.,pval<=0.05)
+levs <- arrange(gwas.df,enrichment)$trait %>% unique(.)
+gwas.df$trait <- factor(gwas.df$trait,levels=levs)
+gwas.df$tissue <- factor(gwas.df$tissue,levels=c("adipose","liver","muscle","islet","shared","unclassified"))
+
+gwas.plt <- ggplot(data=gwas.df,aes(x=trait,y=enrichment)) + 
+  geom_point(shape=21,aes(fill=-log(pval,base=10),size=observed)) +
+  scale_fill_viridis() + 
+  scale_size_continuous(range=c(0.5,3)) +
+  facet_wrap(~tissue,nrow = 1)+
+  coord_flip() + theme_bw()
+  
+ggsave(plot=gwas.plt,filename=plot.dir %&%
+         "gwas_enrich_20.png",width=15,height=12)
+ggsave(plot=gwas.plt,filename=plot.dir %&%
+         "gwas_enrich_20.pdf",width=15,height=12)
 
 ```
 
@@ -185,7 +214,7 @@ epi_plot <- function(plot.df){
   geom_text(aes(size=observed.count,
                 label=round(enrich.factor,digits=1)),
             color=viridis(10)[1]) + 
-  scale_size_continuous(range=c(0.5,3.5)) + 
+  scale_size_continuous(range=c(1,3.5),limits = c(0,120)) + 
   scale_fill_viridis(name="-log10(pval)",option = "D") + 
   xlab("Classified Tissue") + ylab("Tissue/cell type (H3K27ac peaks)") + 
   theme(axis.text.x=element_text(angle=90),
@@ -196,6 +225,7 @@ epi_plot <- function(plot.df){
 
 ```
 
+Save files 
 
 ```{r}
 
@@ -233,32 +263,80 @@ ggsave(plot=epi.plt80,filename=plot.dir %&%
 ```
 
 
-# GWAS Enrichment 
 
+
+# FANTOM5 CAGE enhancer enrichments 
 
 ```{r}
 
-gwas.df <- fread(work.dir %&%
-      "enrichment_files/gwas/gwas_enrichment_TOAthresh20.txt") %>% 
-  filter(.,pval<=0.05)
-levs <- arrange(gwas.df,enrichment)$trait %>% unique(.)
-gwas.df$trait <- factor(gwas.df$trait,levels=levs)
-gwas.df$tissue <- factor(gwas.df$tissue,levels=c("adipose","liver","muscle","islet","shared","unclassified"))
+file.path <- work.dir %&% "enrichment_files/enrich_H3K27ac/thresh20/enrich_FANTOM5_t20.txt"
 
-gwas.plt <- ggplot(data=gwas.df,aes(x=trait,y=enrichment)) + 
-  geom_point(shape=21,aes(fill=-log(pval,base=10),size=observed)) +
-  scale_fill_viridis() + 
-  scale_size_continuous(range=c(0.5,3)) +
-  facet_wrap(~tissue,nrow = 1)+
-  coord_flip()
-  
-ggsave(plot=gwas.plt,filename=plot.dir %&%
-         "gwas_enrich_20.png",width=15,height=12)
+process_plot_df <- function(file.path){
+  plot.df <- fread(file.path)
+  plot.df$cell_type <- map(plot.df$tissue_H3K27ac, function(s){
+                          filter(eid.df,`Epigenome ID (EID)`==s)$`Standardized Epigenome name`        
+  }) %>% as.character(.)
+  plot.df$group <- map(plot.df$tissue_H3K27ac, function(s){
+                        filter(eid.df,`Epigenome ID (EID)`==s)$GROUP
+  }) %>% as.character(.)
+  levs <- arrange(plot.df,(group))$cell_type %>% unique(.)
+  plot.df$cell_type <- factor(plot.df$cell_type,levels = levs)  
+  return(plot.df)
+}
+
+epi_plot <- function(plot.df){
+  ggplot(data=plot.df,aes(x=tissue_toa,y=cell_type))+
+  geom_tile(aes(fill=-log(p.val,base=10)),color="black") + 
+  geom_text(aes(size=observed.count,
+                label=round(enrich.factor,digits=1)),
+            color=viridis(10)[1]) + 
+  scale_size_continuous(range=c(1,3.5),limits = c(0,120)) + 
+  scale_fill_viridis(name="-log10(pval)",option = "D") + 
+  xlab("Classified Tissue") + ylab("Tissue/cell type (H3K27ac peaks)") + 
+  theme(axis.text.x=element_text(angle=90),
+        strip.background = element_rect(fill="ghostwhite",color="black",
+                                        linetype="solid",size=1)) 
+}
 
 
 ```
 
+Save files 
 
+```{r}
+
+file.path00 <- serv.dir %&% "projects/t2d_classification/revamp/enrichment_files/enrich_H3K27ac/thresh00/enrich_H3K27ac_t00.txt"
+plot.df00 <- process_plot_df(file.path00)
+epi.plt00 <- epi_plot(plot.df00)
+ggsave(plot=epi.plt00,filename=plot.dir %&%
+         "roadmap_enrich_00.png",width=8,height=12)
+ggsave(plot=epi.plt00,filename=plot.dir %&%
+         "roadmap_enrich_00.pdf",width=8,height=12)
+
+file.path20 <- serv.dir %&% "projects/t2d_classification/revamp/enrichment_files/enrich_H3K27ac/thresh20/enrich_H3K27ac_t20.txt"
+plot.df20 <- process_plot_df(file.path20)
+epi.plt20 <- epi_plot(plot.df20)
+ggsave(plot=epi.plt20,filename=plot.dir %&%
+         "roadmap_enrich_20.png",width=8,height=12)
+ggsave(plot=epi.plt20,filename=plot.dir %&%
+         "roadmap_enrich_20.pdf",width=8,height=12)
+
+file.path50 <- serv.dir %&% "projects/t2d_classification/revamp/enrichment_files/enrich_H3K27ac/thresh50/enrich_H3K27ac_t50.txt"
+plot.df50 <- process_plot_df(file.path50)
+epi.plt50 <- epi_plot(plot.df50)
+ggsave(plot=epi.plt50,filename=plot.dir %&%
+         "roadmap_enrich_50.png",width=8,height=12)
+ggsave(plot=epi.plt50,filename=plot.dir %&%
+         "roadmap_enrich_50.pdf",width=8,height=12)
+
+file.path80 <- serv.dir %&% "projects/t2d_classification/revamp/enrichment_files/enrich_H3K27ac/thresh80/enrich_H3K27ac_t80.txt"
+plot.df80 <- process_plot_df(file.path80)
+epi.plt80 <- epi_plot(plot.df80)
+ggsave(plot=epi.plt80,filename=plot.dir %&%
+         "roadmap_enrich_80.png",width=8,height=12)
+ggsave(plot=epi.plt80,filename=plot.dir %&%
+         "roadmap_enrich_80.pdf",width=8,height=12)
+```
 
 
 
