--- a/tactical_analyses/00.1_fgwas-enrichment-plot.Rmd
+++ b/tactical_analyses/00.1_fgwas-enrichment-plot.Rmd
@@ -9,15 +9,6 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
----
-title: "Untitled"
-output: html_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
 # Setup
 
 ```{r}
@@ -26,6 +17,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library("tidyverse")
 library("data.table")
+library("gridExtra")
+library("viridis")
 
 got2d.dir <- "/home/jason/science/servers/FUSE/"
 serv.dir <- "/home/jason/science/servers/FUSE5/"
@@ -88,25 +81,30 @@ build_param_df <- function(fgwas.out.dir,tissue,name.vec=NULL){
 
 
 ```{r}
-strong.enhancers <- c("9_Active_enhancer_1","10_Active_enhancer_2")
-weak.enhancers <- c("11_Weak_enhancer")
-repressed.regions <- c("16_Repressed_polycomb", "17_Weak_repressed_polycomb")
-strong.promoter <- c("1_Active_TSS")
-weak.promoter <- c("2_Weak_TSS")
-flank.promoter <- c("3_Flanking_TSS")
-strong.gene.transcription <- c("5_Strong_transcription")
-weak.gene.transcription <- c("6_Weak_transcription")
-bivalent.tss <- c("14_Bivalent_poised_TSS")
-genic.enhancer <- c("8_Genic_enhancer")
-low.signal <- c("18_Quiescent_low_signal")
-coding <- c("coding")
 
-annot.names <- c("strong.enhancers","weak.enhancers","repressed.regions","strong.promoter",
-                 "weak.promoter", "flank.promoter","strong.gene.transcription",
-                 "weak.gene.transcription","bivalent.tss","genic.enhancer","low.signal","coding")
-annot.list <- list(strong.enhancers,weak.enhancers,repressed.regions,strong.promoter,
-               weak.promoter, flank.promoter, strong.gene.transcription,
-               weak.gene.transcription, bivalent.tss,genic.enhancer,low.signal,coding)
+Active_enhancer_1 <- c("9_Active_enhancer_1")
+Active_enhancer_2 <- c("10_Active_enhancer_2")
+Weak_enhancer <- c("11_Weak_enhancer")
+repressed.polycomb <- c("16_Repressed_polycomb")
+repressed.polycomb.weak <- c("17_Weak_repressed_polycomb")
+Active_TSS <- c("1_Active_TSS")
+Weak_TSS <- c("2_Weak_TSS")
+Flanking_TSS <- c("3_Flanking_TSS")
+Strong_transcription <- c("5_Strong_transcription")
+Weak_transcription <- c("6_Weak_transcription")
+Bivalent_poised_TSS <- c("14_Bivalent_poised_TSS")
+Genic_enhancer <- c("8_Genic_enhancer")
+low.signal <- c("18_Quiescent_low_signal")
+Coding <- c("coding")
+
+annot.names <- c("Active_enhancer_1","Active_enhancer_2","Weak_enhancer","repressed.polycomb",
+                 "repressed.polycomb.weak","Active_TSS","Weak_TSS", "Flanking_TSS",
+                 "Strong_transcription","Weak_transcription",
+                 "Bivalent_poised_TSS","Genic_enhancer","low.signal","Coding")
+annot.list <- list(Active_enhancer_1,Active_enhancer_2,Weak_enhancer,repressed.polycomb,
+                   repressed.polycomb.weak,Active_TSS,Weak_TSS, Flanking_TSS,
+                   Strong_transcription,Weak_transcription,Bivalent_poised_TSS,
+                   Genic_enhancer,low.signal,Coding)
 
 ```
 
@@ -120,18 +118,13 @@ isl.df <- build_param_df(fgwas.dir%&%"fgwas_output_islet/","islet")
 all.df <- rbind(isl.df,adi.df,mus.df,liv.df)
 all.df$parameter <- gsub("_ln","",all.df$parameter)
 
-get_weight <- function(all.df,annot.group){
-  sub <-filter(all.df,parameter%in%annot.group)
-  med <- sub$estimate %>% median(.)
-  weight <- med
-  return(weight)
-}
 
 get_weight_full <- function(all.df,annot.group){
   sub <-filter(all.df,parameter%in%annot.group)
-  w.df <- sub %>% group_by(.,tissue) %>% summarise(.,avg=mean(estimate))
-  #med <- sub$estimate %>% median(.)
-  weight.vec <- w.df$avg
+  w.df <- sub %>% group_by(.,tissue) 
+  weight.vec <- map(1:dim(w.df)[1],function(i){
+    ifelse(sign(w.df[i,]$CI_lo)==sign(w.df[i,]$CI_hi),w.df[i,]$estimate,0)
+  }) %>% as.numeric(.)
   names(weight.vec) <- w.df$tissue
   return(weight.vec)
 }
@@ -143,7 +136,8 @@ build_weight_full_df <- function(all.df,annot.names,annot.list){
     annot <- annot.names[i]
     annot.group <- annot.list[[i]]
     weight.vec <- get_weight_full(all.df,annot.group)
-    build.df <- data.frame("annotation"=annot,"tissue"=names(weight.vec),"weight"=unname(weight.vec),stringsAsFactors = FALSE)
+    build.df <- data.frame("tissue"=names(weight.vec),"annotation"=annot,
+                           "weight"=2^(unname(weight.vec)),stringsAsFactors = FALSE)
     out.df <- rbind(out.df,build.df)
   }
   return(out.df)
@@ -152,7 +146,6 @@ build_weight_full_df <- function(all.df,annot.names,annot.list){
 
 ```
 
-
 ```{r}
 
 firstup <- function(x) {
@@ -160,13 +153,14 @@ firstup <- function(x) {
 x
 }
 
-exclude.vec <- c("low.signal","repressed.regions","bivalent.tss")
+exclude.vec <- c("low.signal","repressed.polycomb","repressed.polycomb.weak",
+                 "Bivalent_poised_TSS")
 
 wf.df <- build_weight_full_df(all.df,annot.names,annot.list)
 filt.df <- filter(wf.df,!(annotation%in%exclude.vec))
 filt.df$tissue <- filt.df$tissue %>% firstup(.)
 
-plt <- ggplot(data=filt.df,aes(x=annotation,y=2^weight)) + 
+plt <- ggplot(data=filt.df,aes(x=annotation,y=weight)) + 
   geom_bar(stat="identity",color="black",fill=viridis(10)[5]) + facet_wrap(~tissue) + 
   theme_bw() + theme(axis.text.x = element_text(angle=30,vjust=0.6),
                     panel.grid.minor.y = element_blank(),
@@ -177,7 +171,8 @@ plt <- ggplot(data=filt.df,aes(x=annotation,y=2^weight)) +
 ggsave(plt,filename = plot.dir %&%"fgwas-enrich.png",width=8,height=6)
 ggsave(plt,filename = plot.dir %&%"fgwas-enrich.pdf",width=8,height=6)
 
-write.table(x=filt.df,file=write.dir %&%"weight-enrich-all.txt",sep="\t",quote=F,row.names = F)
+write.table(x=filt.df,file=write.dir %&%"weight-enrich-all.txt",sep="\t",quote=F,row.names = F,
+            col.names=F)
 
 ```
 
@@ -190,7 +185,7 @@ an_plot <- function(mydf,mytitl="",mylow=-10,myhigh=10,interval=1){
   mydf <- filter(mydf,parameter!="pi_region")
   plt <- ggplot(data=mydf,aes(x=parameter,y=estimate)) +
       geom_hline(yintercept=0,linetype=2) +
-    ylab("Log2 Fold Enrichement") + xlab("Annotation") +
+    ylab("Log2 Fold Enrichment") + xlab("Annotation") +
     geom_errorbar(aes(ymin=CI_lo,ymax=CI_hi),width=0.1) +
     geom_point(shape=21,size=2,col="black",aes(fill=(estimate>0)))  +
     scale_fill_manual(values=colorRampPalette(viridis_pal()(10))(2)) + 
